--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"webpack serve --mode development",
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "preshow:coverage": "npm run coverage",
+    "show:coverage": "live-server coverage/lcov-report",
+    "preshow:dist": "npm run build",
+    "show:dist": "live-server dist"
   },
-  "author": "",
+  "author": "AlisaAA",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "7.14.8",
@@ -17,9 +22,11 @@
     "@babel/plugin-proposal-private-methods": "7.14.5",
     "@babel/preset-env": "7.14.9",
     "babel-loader": "8.2.2",
+    "css-loader": "^6.2.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.23.4",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "5.3.2",
     "webpack": "5.48.0",
     "webpack-cli": "4.7.2"
