--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "5.3.2",
     "webpack": "5.48.0",
-    "webpack-cli": "4.7.2"
+    "webpack-cli": "4.7.2",
+    "mini-css-extract-plugin": "2.2.0"
+    
   },
   "dependencies": {
     "core-js": "3.16.0"
